improved page style

--- a/data/styles.css
+++ b/data/styles.css
@@ -1,17 +1,34 @@
+body {
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .message {
   color: #333;
   font-size: 14px;
-  margin: 0px;
+  margin: 0px 10px;
+  width: 580px;
 }
 
 .name {
   color: darkblue;
   font-size: 15px;
-  margin-bottom: 5px;
+  font-weight: bold;
+  margin: 0px 0px 5px 10px;
+  width: 580px;
 }
 
 .input-area {
   margin: 10px;
+}
+
+.logo-image {
+  width: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  
 }
 
 hr {
